array.island.Island.scala.error
Compilation error:
Island:19: error: not found: value mun
    levels(mun(i)-min) = true;
           ^